log

Thu 14 Mar 2024 08:36:02 PM UTC: 
 exercises.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
943f885
Thu 14 Mar 2024 08:36:47 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d1e4b2b
Thu 14 Mar 2024 08:44:45 PM UTC: 
 exercises.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:20: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |           nuevaArr = arr[i];
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
7ce7ce8
Thu 14 Mar 2024 08:45:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7d12ca0
Thu 14 Mar 2024 08:46:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8db53ed
Thu 14 Mar 2024 08:47:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
0189060
Thu 14 Mar 2024 08:48:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
b1060d9
Thu 14 Mar 2024 08:57:57 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
0625b94
Thu 14 Mar 2024 09:02:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
25fc2e6
Thu 14 Mar 2024 09:03:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ef336db
Thu 14 Mar 2024 09:04:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ee38c92
Thu 14 Mar 2024 09:12:59 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 30/70
e8c829c
Thu 14 Mar 2024 09:14:11 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|4
total_score: 30/70
6da663f
Thu 14 Mar 2024 09:18:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:65:10: error: ‘nuevaArr’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   65 |   return nuevaArr;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e221a49
Thu 14 Mar 2024 09:19:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:7: error: array size missing in ‘nuevaArr’
   47 |   int nuevaArr[];
      |       ^~~~~~~~
exercises.c:54:20: error: assignment to expression with array type
   54 |           nuevaArr = (int *)malloc(sizeof(int));
      |                    ^
exercises.c:59:20: error: assignment to expression with array type
   59 |           nuevaArr = (int *)realloc(nuevaArr, (*newSize) * sizeof(int));
      |                    ^
exercises.c:65:10: error: function returns address of local variable [-Werror=return-local-addr]
   65 |   return nuevaArr;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
40a6757
Thu 14 Mar 2024 10:58:43 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
5e3ea1a
Thu 14 Mar 2024 11:00:30 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
aee2a57
Thu 14 Mar 2024 11:01:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
bd2946f
Thu 14 Mar 2024 11:02:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:88:63: error: expected statement before ‘)’ token
   88 |       else if (arr1[i] == arr2[j] && result[k] != arr1[i - 1]))
      |                                                               ^
Compilation failed
1df72d4
Thu 14 Mar 2024 11:02:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
e0b6a43
Thu 14 Mar 2024 11:03:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
279db3b
Thu 14 Mar 2024 11:04:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
1685837
Thu 14 Mar 2024 11:06:46 PM UTC: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:96:21: error: expected ‘)’ before ‘!’ token
   96 |   if (i < size1 && j !< size2)
      |      ~              ^~
      |                     )
exercises.c:105:21: error: expected ‘)’ before ‘!’ token
  105 |   if (j < size2 && i !< size1)
      |      ~              ^~
      |                     )
Compilation failed
4c32ac9
Thu 14 Mar 2024 11:07:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
b39cd90
Thu 14 Mar 2024 11:09:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
bee2020
Thu 14 Mar 2024 11:09:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
eaf8d0d
Thu 14 Mar 2024 11:10:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
bda647b
Thu 14 Mar 2024 11:11:31 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
205f9c7
Thu 14 Mar 2024 11:11:57 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
total_score: 30/70
4333663
Thu 14 Mar 2024 11:12:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:78:31: error: expected expression before ‘)’ token
   78 |       if (arr1[i] < arr2[j] &&)
      |                               ^
Compilation failed
b5bf174
Thu 14 Mar 2024 11:12:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4338269
Thu 14 Mar 2024 11:12:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4e73868
Thu 14 Mar 2024 11:14:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
1145294
Thu 14 Mar 2024 11:14:35 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
0413d28
Thu 14 Mar 2024 11:25:07 PM UTC: 
 exercises.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  0|3
8f4efaf
Thu 14 Mar 2024 11:26:06 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
f0f6cb7
Thu 14 Mar 2024 11:35:35 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 11:37:13 PM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
4b2e753
Thu 14 Mar 2024 11:53:35 PM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:130:15: error: ‘orden’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  130 |       else if (orden == -1 && arr[i] < arr[i-1]) return 0;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
d5634d8
Thu 14 Mar 2024 11:54:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
b24a418
Thu 14 Mar 2024 11:56:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
3ad1ffc
Thu 14 Mar 2024 11:57:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
6017f4d
Thu 14 Mar 2024 11:59:21 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|2
total_score: 50/70
977500c
Fri 15 Mar 2024 12:00:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
aee41f3
Fri 15 Mar 2024 12:01:22 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|2
total_score: 50/70
99558fb
Fri 15 Mar 2024 12:07:28 AM UTC: 
 exercises.c | 29 +++++++++++++++++++++--------
 1 file changed, 21 insertions(+), 8 deletions(-)
Fri 15 Mar 2024 12:07:39 AM UTC: 
 exercises.c | 30 ++++++++++++++++++++++--------
 1 file changed, 22 insertions(+), 8 deletions(-)
 tests:  0|1
total_score: 60/70
ffa4d12
Fri 15 Mar 2024 12:11:39 AM UTC: 
 exercises.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
 tests:  0|1
total_score: 60/70
2698766
